# Fission

./: .cursorrules  .gitattributes  .gitignore  .gitmodules  404.html  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.workspace-cli-only  Dockerfile  GEMINI.md  PROJECT.md  README.md  SECURITY.md  SKILL.md  SKILLS.md  THIRD_PARTY.md  build.rs  decomp_0x1400052b0_after.json  decomp_0x140006260_after6.json  deny.toml  failed_logs.txt  fission.toml  index.html  inject_utils.py  mkdocs.yml  putty_single.c  sandbox_test.c  scratch_test  scratch_test.c  scratch_test_win.c  sitemap.xml  test.c  test_objc_bin  test_swift_bin
crates/fission-ai/: Cargo.toml
crates/fission-ai/examples/: analyze_pseudocode.rs
crates/fission-ai/src/: lib.rs
crates/fission-ai/tests/: mock_provider_tests.rs
crates/fission-analysis/: COMPATIBILITY.md  Cargo.toml  build.rs
crates/fission-analysis-db/: AGENTS.md  Cargo.toml
crates/fission-analysis-db/src/: integrity.rs  lib.rs
crates/fission-analysis/benches/: benchmark.rs
crates/fission-analysis/src/: lib.rs  prelude.rs
crates/fission-automation/: AGENTS.md  Cargo.toml  README.md
crates/fission-automation/config/: sentinel_sets.toml  timeout_rescue.json
crates/fission-automation/src/: AGENTS.md  artifacts.rs  cli.rs  corpus.rs  diagnosis.rs  gates.rs  inventory.rs  lanes.rs  main.rs  model.rs  report.rs
crates/fission-cli/: AGENTS.md  Cargo.toml  build.rs
crates/fission-cli/src/: lib.rs  main.rs
crates/fission-core/: Cargo.toml
crates/fission-core/src/: architecture.rs  lib.rs
crates/fission-decompiler/: Cargo.toml
crates/fission-decompiler-core/: Cargo.toml
crates/fission-decompiler-core/src/: engine.rs  facts.rs  legacy_postprocess.rs  lib.rs  recovery.rs  render.rs  request.rs  routing.rs  taxonomy.rs  types.rs  worker.rs
crates/fission-decompiler/src/: README.md  adapters.rs  engine.rs  facts.rs  fid.rs  lib.rs  recovery.rs  render.rs  request.rs  routing.rs  worker.rs
crates/fission-dioxus/: AGENTS.md  Cargo.toml  Dioxus.toml
crates/fission-dioxus/assets/: style.css
crates/fission-dioxus/src/: engine.rs  main.rs  state.rs
crates/fission-dir/: AGENTS.md  Cargo.toml
crates/fission-dir/src/: diff.rs  interp.rs  lib.rs
crates/fission-dir/testdata/: max2.elf  src_max2.c
crates/fission-dir/tests/: real_binary_end_to_end.rs
crates/fission-dynamic/: Cargo.toml  README.md
crates/fission-dynamic/examples/: runtime_status.rs
crates/fission-dynamic/src/: decode.rs  lib.rs  prelude.rs  runtime_status.rs  x86_decode.rs
crates/fission-emulator/: AGENTS.md  Cargo.toml
crates/fission-emulator/src/: core.rs  lib.rs  loader.rs  metrics.rs  snapshot.rs  srd.rs  trace.rs
crates/fission-emulator/testdata/: linux_x64_hello_sys.elf  x64_concolic_branch_sys.elf  x64_dyn_printf_malloc.elf  x64_static_printf_malloc.elf
crates/fission-emulator/tests/: diag_alloc_meta.rs  diag_expand_stall.rs  diag_livelock.rs  diag_sections.rs  metrics_unit.rs  path_sat_prune.rs  shadow_prop_unit.rs  smoke_concolic_branch.rs  smoke_dyn_elf.rs  smoke_linux_hello.rs  smoke_pe_exit.rs  smoke_printf_malloc.rs  srd_semantic_replay.rs  static_crt_profile.rs  ttd_sym_unit.rs
crates/fission-ffi/: Cargo.toml  build.rs
crates/fission-ffi/src/: decomp.rs  decomp_safe.rs  lib.rs  pcode.rs  pcode_safe.rs
crates/fission-loader/: AGENTS.md  Cargo.toml
crates/fission-loader/fuzz/: Cargo.toml
crates/fission-loader/src/: lib.rs  prelude.rs
crates/fission-loader/testdata/: x64_dyn_array_test.elf  x64_dyn_enum_test.elf  x64_dyn_lexblock_test.elf  x64_dyn_lsda_pie_test.elf  x64_dyn_lsda_test.elf  x64_dyn_puts.elf  x64_dyn_split_debug_test.elf  x64_dyn_split_debug_test.elf.debug  x64_dyn_vmi_rtti_test.elf
crates/fission-midend-core/: Cargo.toml
crates/fission-midend-core/src/: abi_param.rs  fast_hash.rs  labels.rs  lib.rs  wave_stats.rs
crates/fission-midend-dir/: Cargo.toml
crates/fission-midend-dir/src/: lib.rs
crates/fission-midend-normalize/: Cargo.toml
crates/fission-midend-normalize/src/: AGENTS.md  lib.rs  rule_normalizer.rs  subvar_flow.rs
crates/fission-midend-structuring/: Cargo.toml
crates/fission-midend-structuring/src/: admission.rs  collapse_loop.rs  driver_pure.rs  graph.rs  guarded_tail_pure.rs  helpers.rs  host.rs  irreducible.rs  lib.rs  linear_body.rs  linear_multiblock.rs  linear_recovery.rs  linear_types.rs  loop_analysis.rs  loops.rs  orphan_repair.rs  regions.rs  sese_discovery.rs  sese_driver.rs  switch.rs
crates/fission-pcode/: Cargo.toml
crates/fission-pcode/src/: fast_hash.rs  lib.rs
crates/fission-pcode/tests/: cfg_ghidra_parity_fixtures.rs
crates/fission-plugin/: Cargo.toml
crates/fission-plugin/src/: events.rs  lib.rs
crates/fission-script/: Cargo.toml  README.md
crates/fission-script/examples/: list_imports.rhai
crates/fission-script/src/: engine.rs  error.rs  host.rs  lib.rs  limits.rs  result.rs  sandbox.rs
crates/fission-serve/: Cargo.toml
crates/fission-serve/src/: config.rs  lib.rs  session.rs  types.rs
crates/fission-signatures/: Cargo.toml
crates/fission-signatures/data/: README.md
crates/fission-signatures/src/: api_types.rs  database.rs  fid_hash.rs  ghidra_patterns.rs  golang_typeinfo.rs  import_flat.rs  lib.rs  mod.rs  msvc_sigs.rs  prelude.rs  provider.rs  relation.rs  signature.rs  win_api.rs  win_types.rs  (+1 more)
crates/fission-sleigh/: AGENTS.md  Cargo.toml  README.md  build.rs  build.toml  sleigh.md
crates/fission-static/: Cargo.toml  build.rs
crates/fission-ttd/: Cargo.toml
crates/fission-tui/: Cargo.toml
crates/fission-ui/: Cargo.toml
ghidra_decompiler/: CMakeLists.txt  fission_decomp.cpp  server_main.cc  test_gdt  wrapper.cpp  wrapper.h
ghidra_decompiler/com_dbg/: depend
ghidra_decompiler/com_opt/: depend
ghidra_decompiler/decompile/: action.cc  architecture.cc  architecture.hh  flow.cc  funcdata_block.cc  heritage.cc  jumptable.cc  op.cc  op.hh  printc.cc  printc.hh  ruleaction.cc  sleigh.cc  sleigh_arch.cc  typeop.cc  variable.cc  variable.hh  varnode.cc  varnode.hh
ghidra_decompiler/fission/: constants.h  post_processors.h
(+6474 files in other folders)
