[workspace]
resolver = "2"
# Tauri GUI crate: if this path is unavailable, comment out the member below
# so Cargo and rust-analyzer can still load the rest of the workspace.
# See docs/build/BUILD.md, "Rust workspace / rust-analyzer".
members = [
    "crates/fission-script",
    "crates/fission-automation",
    "crates/fission-core",
    "crates/fission-loader",
    "crates/fission-pcode",
    "crates/fission-decompiler",
    "crates/fission-signatures",
    "crates/fission-static",
    "crates/fission-dynamic",
    "crates/fission-ttd",
    "crates/fission-plugin",
    "crates/fission-cli",
    "crates/fission-tauri/src-tauri",
    "crates/fission-sleigh",
    "crates/fission-ai",
    "crates/fission-tui",
]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
