[workspace]
resolver = "2"
members = [
    "crates/fission-script",
    "crates/fission-automation",
    "crates/fission-core",
    "crates/fission-loader",
    "crates/fission-analysis-db",
    "crates/fission-pcode",
    "crates/fission-decompiler",
    "crates/fission-signatures",
    "crates/fission-static",
    "crates/fission-dynamic",
    "crates/fission-ttd",
    "crates/fission-plugin",
    "crates/fission-cli",
    "crates/fission-sleigh",
    "crates/fission-ai",
    "crates/fission-tui", "crates/fission-dioxus", "crates/fission-emulator",
    "crates/fission-solver",
    # fission-dioxus — Pure Rust desktop GUI (Dioxus); to be added when ready
]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
