[workspace]
resolver = "2"
members = [
    "crates/fission-script",
    "crates/fission-automation",
    "crates/fission-core",
    "crates/fission-loader",
    "crates/fission-analysis-db",
    "crates/fission-pcode",
    "crates/fission-midend-core",
    "crates/fission-midend-dir",
    "crates/fission-midend-normalize",
    "crates/fission-midend-structuring",
    "crates/fission-decompiler",
    "crates/fission-signatures",
    "crates/fission-static",
    "crates/fission-dynamic",
    "crates/fission-ttd",
    "crates/fission-plugin",
    "crates/fission-cli",
    "crates/fission-sleigh",
    "crates/fission-ai",
    "crates/fission-tui", "crates/fission-dioxus", "crates/fission-emulator",
    "crates/fission-solver",
    "crates/fission-verify",
    "crates/fission-ui",
    "crates/fission-serve",
    # fission-dioxus — Pure Rust desktop GUI (Dioxus); to be added when ready
]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

# Release-equivalent codegen with symbols kept, for `sample`/`perf` profiling.
# `cargo build --profile profiling -p fission-cli`
[profile.profiling]
inherits = "release"
strip = false
debug = 1

# Fast local dev-loop rebuild: real -O3 runtime perf (so decomp-speed/output
# checks stay representative) without release's fat-LTO + codegen-units=1,
# which serialize codegen/linking and dominate rebuild wall time. Not for
# shipping — CI/release builds must keep using [profile.release].
# `cargo build --profile quick-release -p fission-cli`
[profile.quick-release]
inherits = "release"
lto = false
codegen-units = 16
strip = false

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
