[package]
name = "fission-ai"
version = "0.1.2"
edition = "2024"
authors = ["Fission Dev Team"]
license = "AGPL-3.0-or-later"
description = "Fission AI agent platform: multi-provider pipeline, Codex OAuth, interactive session"
repository = "https://github.com/sjkim1127/Fission"
readme = "../../README.md"
keywords = ["fission", "ai", "agent", "llm"]
categories = ["development-tools"]

[features]
default = []

[dependencies]
fission-core = { path = "../fission-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "fs", "net", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
async-trait = "0.1"
futures = "0.3"
dirs = "6"
sha2 = "0.11.0"
base64 = "0.22.1"
async-stream = "0.3.6"
anyhow = "1.0.102"
