[package]
name = "fission-analysis"
version = "0.1.0"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Fission analysis, debug, and unpacker engine"
license = "MIT"
repository = "https://github.com/sjkim1127/Fission"
readme = "../../README.md"
keywords = ["fission", "decompiler", "reverse-engineering", "ghidra"]
categories = ["development-tools::debugging"]

[features]
default = ["native_decomp"]
python = ["dep:pyo3"]
native_decomp = []

[dependencies]
fission-core = { path = "../fission-core" }
object = "0.32"
iced-x86 = { version = "1.21", features = ["std"] }
bytes = "1.5"
tokio = { version = "1.36", features = ["full", "rt-multi-thread"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
crossbeam-channel = "0.5"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"
hex = "0.4"
base64 = "0.22"
colored = "2.1"
regex = "1.10"
lru = "0.12"
toml = "0.8"
dirs = "5.0"
flate2 = "1.1.5"
sysinfo = "0.37.2"
binrw = "0.15.0"
once_cell = "1.19"
libloading = "0.8"
pyo3 = { version = "0.24", features = ["auto-initialize"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_ProcessStatus",
    "Win32_System_Kernel",
] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.28", features = ["ptrace", "process"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
proptest = "1.4"
insta = { version = "1.34", features = ["yaml"] }
criterion = "0.5"

[[bench]]
name = "benchmark"
path = "../../benches/benchmark.rs"
harness = false
