[package]
name = "fission-analysis"
version = "0.1.0"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Fission compatibility facade for static and dynamic analysis crates"
repository = "https://github.com/sjkim1127/Fission"
readme = "../../README.md"
keywords = ["fission", "decompiler", "reverse-engineering", "ghidra"]
categories = ["development-tools::debugging"]

[features]
default = []
interactive_runtime = ["dep:fission-dynamic", "fission-dynamic/interactive_runtime"]
native_decomp = ["fission-static/native_decomp"]
unpacker_runtime = ["dep:fission-dynamic", "fission-dynamic/unpacker_runtime"]

[dependencies]
fission-core = { path = "../fission-core" }
fission-loader = { path = "../fission-loader" }
fission-static = { path = "../fission-static" }
fission-dynamic = { path = "../fission-dynamic", optional = true, default-features = false }
fission-ai = { path = "../fission-ai" }
