[package]
name = "fission-automation"
version = "0.1.4"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Canonical automation runner for Fission quality pipelines"
repository = "https://github.com/sjkim1127/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
keywords = ["fission", "automation", "benchmark", "quality"]
categories = ["development-tools"]

[features]
default = []
allocator-mimalloc = ["dep:mimalloc"]
allocator-jemallocator = ["dep:jemallocator"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
metrics = "0.24"
miette = { version = "7.4", features = ["fancy"] }
fission-core = { path = "../fission-core" }
fission-pcode = { path = "../fission-pcode" }
mimalloc = { version = "0.1", optional = true }
jemallocator = { version = "0.5", optional = true }
