[package]
name = "fission-cli"
version = "0.1.2"
edition = "2024"
build = "build.rs"
authors = ["Fission Dev Team"]
description = "Fission CLI and entrypoint"
repository = "https://github.com/sjkim1127/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
keywords = ["fission", "decompiler", "reverse-engineering", "ghidra"]
categories = ["development-tools::debugging"]
default-run = "fission_cli"

[lib]
name = "fission_cli"
path = "src/lib.rs"

[features]
default = []
native_decomp = [
    "fission-static/native_decomp",
]
debugger = ["dep:fission-dynamic"]
allocator-mimalloc = ["dep:mimalloc"]
allocator-jemallocator = ["dep:jemallocator"]

[dependencies]
fission-core = { path = "../fission-core" }
fission-script = { path = "../fission-script" }
fission-loader = { path = "../fission-loader" }
fission-static = { path = "../fission-static" }
fission-decompiler = { path = "../fission-decompiler" }
fission-sleigh = { path = "../fission-sleigh" }

fission-emulator = { path = "../fission-emulator" }
fission-dynamic = { path = "../fission-dynamic", optional = true, features = ["interactive_runtime"] }
fission-ai = { path = "../fission-ai" }
fission-tui = { path = "../fission-tui" }
rayon = "1.10"
tracing = "0.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miette = { version = "7.4", features = ["fancy"] }
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
mimalloc = { version = "0.1", optional = true }
jemallocator = { version = "0.5", optional = true }
ctrlc = "3.5.2"

[[bin]]
name = "fission_cli"
path = "src/bin/fission_cli.rs"
test = false

[[bin]]
name = "fission_preview_worker"
path = "src/bin/fission_preview_worker.rs"
test = false
required-features = ["native_decomp"]

[[bin]]
name = "fission_nir_worker"
path = "src/bin/fission_nir_worker.rs"
test = false
required-features = ["native_decomp"]
