[package]
name = "fission-core"
version = "0.1.0"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Fission core utilities"
license = "MIT"
repository = "https://github.com/sjkim1127/Fission"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
