[package]
name = "fission-core"
version = "0.1.3"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Fission core utilities"
repository = "https://github.com/sjkim1127/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
keywords = ["fission", "decompiler", "reverse-engineering", "ghidra"]
categories = ["development-tools::debugging"]

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
dirs = "6.0"
once_cell = "1.21"
tracing = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
bitflags = "2.4"
rkyv = { version = "0.7.46", features = ["validation"] }

[dev-dependencies]
tempfile = "3"
