[package]
name = "fission-core"
version = "0.1.6"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Fission core utilities"
repository = "https://github.com/fission-systems/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
keywords = ["fission", "decompiler", "reverse-engineering", "ghidra"]
categories = ["development-tools::debugging"]

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
dirs = "6.0"
once_cell = "1.21"
tracing = "0.1"
tracing-error = "0.2"
bitflags = "2.4"
rkyv = { version = "0.7.46", features = ["validation"] }

# File-based logging — not available on wasm32 (symlink crate is OS-only)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
tempfile = "3"
