[package]
name = "fission-decompiler-core"
version = "0.1.0"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Fission decompiler core orchestration layer"
repository = "https://github.com/sjkim1127/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
keywords = ["fission", "decompiler", "reverse-engineering", "ghidra"]
categories = ["development-tools::debugging"]

[features]
default = []
native_decomp = []

[dependencies]
fission-core = { path = "../fission-core" }
fission-loader = { path = "../fission-loader" }
fission-pcode = { path = "../fission-pcode" }
fission-signatures = { path = "../fission-signatures" }
fission-static = { path = "../fission-static" }
fission-sleigh = { path = "../fission-sleigh" }
once_cell = "1.19"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
fission-loader = { path = "../fission-loader" }
