[package]
name = "fission-decompiler"
version = "0.1.6"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Fission decompilation orchestration (routing, workers, Rust-Sleigh bridge)"
repository = "https://github.com/sjkim1127/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
keywords = ["decompiler", "reverse-engineering", "ghidra"]
categories = ["development-tools::debugging"]

[lib]
name = "fission_decompiler"

[features]
default = []
native_decomp = []

[dependencies]
fission-core = { path = "../fission-core" }
fission-analysis-db = { path = "../fission-analysis-db" }
fission-loader = { path = "../fission-loader" }
fission-pcode = { path = "../fission-pcode" }
fission-midend-core = { path = "../fission-midend-core" }
fission-midend-normalize = { path = "../fission-midend-normalize" }
fission-midend-structuring = { path = "../fission-midend-structuring" }
fission-signatures = { path = "../fission-signatures" }
fission-static = { path = "../fission-static" }
fission-sleigh = { path = "../fission-sleigh" }
once_cell = "1.21"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
fission-loader = { path = "../fission-loader" }
