[package]
name = "fission-dioxus"
version = "0.1.6"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Pure Rust desktop GUI for Fission using Dioxus"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
dioxus-html = { version = "0.6" }
dioxus-logger = "0.6"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
rfd = "0.14"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

fission-core = { path = "../fission-core" }
fission-loader = { path = "../fission-loader" }
fission-static = { path = "../fission-static" }
fission-decompiler = { path = "../fission-decompiler" }
fission-signatures = { path = "../fission-signatures" }
