[package]
name = "fission-dir"
version = "0.1.6"
edition = "2024"
authors = ["Fission Dev Team"]
description = "DIR/HIR differential verification: proves structuring preserves NIR's behavior, and (later) that DIR matches real execution via fission-emulator/fission-solver"
repository = "https://github.com/sjkim1127/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
categories = ["development-tools::debugging"]

[lib]
name = "fission_dir"

[dependencies]
fission-core = { path = "../fission-core" }
fission-loader = { path = "../fission-loader" }
fission-pcode = { path = "../fission-pcode" }
fission-midend-core = { path = "../fission-midend-core" }
fission-decompiler = { path = "../fission-decompiler" }
# Not yet consumed (Phase 1 is DIR-vs-HIR interpretation only, no real
# execution or symbolic reasoning needed for that) -- wired in now per an
# explicit decision to develop the emulator, solver, and this crate's
# real-execution/solver-strengthened equivalence checks (Phase 2) together
# going forward, rather than adding these as a second migration later.
fission-emulator = { path = "../fission-emulator" }
fission-solver = { path = "../fission-solver" }
anyhow = "1.0"
tracing = "0.1"

[dev-dependencies]
fission-loader = { path = "../fission-loader" }
