[package]
name = "fission-dynamic"
version = "0.1.4"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Fission dynamic analysis, runtime, plugin, and unpacker engine"
repository = "https://github.com/sjkim1127/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
keywords = ["fission", "debugger", "reverse-engineering", "runtime"]
categories = ["development-tools::debugging"]

[features]
default = []
interactive_runtime = [
    "dep:fission-plugin",
    "dep:tokio",
    "dep:crossbeam-channel",
    "dep:sysinfo",
    "dep:libloading",
    "dep:rayon",
    "dep:windows",
    "dep:nix",
]

[dependencies]
fission-emulator = { path = "../fission-emulator" }
fission-core = { path = "../fission-core" }
fission-ttd = { path = "../fission-ttd" }
fission-plugin = { path = "../fission-plugin", optional = true, default-features = false, features = ["interactive_runtime"] }
fission-sleigh = { path = "../fission-sleigh" }
fission-loader = { path = "../fission-loader" }
fission-static = { path = "../fission-static", default-features = false }
tokio = { version = "1.36", features = ["full", "rt-multi-thread"], optional = true }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
crossbeam-channel = { version = "0.5", optional = true }
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"
regex = "1.12"
lru = "0.16"
dirs = "6.0"
sysinfo = { version = "0.39.0", optional = true }
once_cell = "1.21"
libloading = { version = "0.9", optional = true }
rayon = { version = "1.10", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_ProcessStatus",
    "Win32_System_Kernel",
], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.28", features = ["ptrace", "process"], optional = true }
