[package]
name = "fission-emulator"
version = "0.1.0"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Fission P-Code Execution Engine and OS HLE"

[dependencies]
fission-sleigh = { path = "../fission-sleigh" }
fission-core = { path = "../fission-core" }
fission-pcode = { path = "../fission-pcode" }
fission-loader = { path = "../fission-loader" }
fission-static = { path = "../fission-static" }
fission-ttd = { path = "../fission-ttd" }
fission-solver = { path = "../fission-solver" }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
byteorder = "1.4"
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3.3"
serde_json = "1.0.150"
hex = "0.4.3"
im = { version = "15.1.0", features = ["serde"] }
