[package]
name = "fission-emulator"
version = "0.1.6"
edition = "2024"
authors = ["Fission Dev Team"]
license = "AGPL-3.0-or-later"
description = "Fission P-Code Execution Engine and OS HLE"

[features]
default = []
## Route float callouts through pure-Rust softfloat policy (NaN quieting).
softfloat = []

[dependencies]
fission-sleigh = { path = "../fission-sleigh" }
fission-core = { path = "../fission-core" }
fission-pcode = { path = "../fission-pcode" }
fission-loader = { path = "../fission-loader" }
fission-static = { path = "../fission-static" }
fission-ttd = { path = "../fission-ttd" }
fission-solver = { path = "../fission-solver" }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
byteorder = "1.4"
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3.3"
serde_json = "1.0.150"
hex = "0.4.3"
im = { version = "15.1.0", features = ["serde"] }
cranelift-jit = "0.133.1"
cranelift-module = "0.133.1"
cranelift-codegen = "0.133.1"
cranelift-frontend = "0.133.1"
cranelift-native = "0.133.1"
# Only used by `selfjit` (the self-implemented JIT skeleton, see
# src/selfjit/mod.rs) for raw executable-memory management -- everything
# else in this crate still goes through the `cranelift-*` backend above.
libc = "0.2"
