[package]
name = "fission-ffi"
version = "0.1.0"
edition = "2024"
authors = ["Fission Dev Team"]
description = "FFI exports for Fission"
license = "MIT"
repository = "https://github.com/sjkim1127/Fission"

[lib]
name = "fission_ffi"
path = "src/lib.rs"
test = false

[dependencies]
fission-analysis = { path = "../fission-analysis" }
