[package]
name = "fission-loader"
version = "0.1.0"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Binary format loader and parser for Fission"
license = "MIT"
repository = "https://github.com/sjkim1127/Fission"
keywords = ["binary", "loader", "pe", "elf", "mach-o"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
fission-core = { path = "../fission-core" }
object = "0.32"
bytes = "1.5"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
hex = "0.4"
regex = "1.10"
binrw = "0.15.0"
once_cell = "1.19"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"

[dev-dependencies]
tempfile = "3.8"
