[package]
name = "fission-loader"
version = "0.1.0"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Binary format loader and parser for Fission"
repository = "https://github.com/sjkim1127/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
keywords = ["binary", "loader", "pe", "elf", "mach-o"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
fission-core = { path = "../fission-core" }
gimli = "0.31"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
regex = "1.12"
blake3 = "1.5"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"
rustc-demangle = "0.1"
cpp_demangle = "0.4"
msvc-demangler = "0.9"
memmap2 = "0.9"
pdb = "0.8"

[dev-dependencies]
tempfile = "3.8"
