[package]
name = "fission-midend-core"
version = "0.1.6"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Midend shared substrate: structured IR, action pipeline, wave stats"
repository = "https://github.com/fission-systems/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
keywords = ["decompiler", "midend", "ir"]
categories = ["development-tools"]

[dependencies]
fission-core = { path = "../fission-core" }
fission-loader = { path = "../fission-loader" }
indexmap = "2"
metrics = "0.24"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0"
