[package]
name = "fission-midend-dir"
version = "0.1.6"
edition = "2024"
authors = ["Fission Dev Team"]
description = "DIR (pre-structuring) midend substrate: DirStmt/DirExpr IR, action pipeline, VSA -- depended on by builder/normalize/structuring, not by render or anything downstream of a finished decompile"
repository = "https://github.com/sjkim1127/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
keywords = ["decompiler", "midend", "ir"]
categories = ["development-tools"]

[dependencies]
fission-core = { path = "../fission-core" }
fission-loader = { path = "../fission-loader" }
fission-midend-core = { path = "../fission-midend-core" }
indexmap = "2"
metrics = "0.24"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0"
