[package]
name = "fission-midend-normalize"
version = "0.1.4"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Midend normalize owner: HIR normalization pipeline"
repository = "https://github.com/sjkim1127/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
keywords = ["decompiler", "normalize", "midend"]
categories = ["development-tools"]

[dependencies]
fission-core = { path = "../fission-core" }
fission-midend-core = { path = "../fission-midend-core" }
fission-signatures = { path = "../fission-signatures" }
indexmap = "2"
once_cell = "1.21"
rustc-hash = "2.1"
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0"
