[package]
name = "fission-midend-structuring"
version = "0.1.3"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Midend structuring owner facade (extraction scaffold; impl still in fission-pcode)"
repository = "https://github.com/sjkim1127/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
keywords = ["decompiler", "structuring", "midend", "cfg"]
categories = ["development-tools"]

[dependencies]
fission-pcode = { path = "../fission-pcode" }
