[package]
name = "fission-midend-structuring"
version = "0.1.6"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Midend structuring free-function owners (CFG analysis, cleanup, regions)"
repository = "https://github.com/sjkim1127/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
keywords = ["decompiler", "structuring", "midend"]
categories = ["development-tools"]

[dependencies]
fission-core = { path = "../fission-core" }
fission-midend-core = { path = "../fission-midend-core" }
indexmap = "2"
tracing = "0.1"
rustc-hash = "2.1"
